--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,15 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
+          <a href="/shopping-cart/"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
             Shopping Basket
+            <span class="badge">{{session.cart.totalQuantity}}</span>
           </a>
         </li>
         <li class="dropdown">
@@ -25,9 +26,13 @@
             Manage <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Account</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            {{#if loggedIn}}
+              <li><a href="/user/profile">Account</a></li>
+              <li><a href="/user/logout">Logout</a></li>
+            {{else}}
+              <li><a href="/user/register">Register</a></li>
+              <li><a href="/user/login">Login</a></li>
+            {{/if}}
           </ul>
         </li>
       </ul>
