implemented 1)proper user authentication during checkout; 2)implemented simple stripe cc payment method; 3)display of my orders section in profile

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -20,5 +20,6 @@
 			<input type="hidden" name="_csrf" value="{{csrfToken}}">
 			<button type="submit" class="btn btn-success">Login</button>
 		</form>
+		<p>Register <a href="/user/register">here</a></p>
 	</div>
 </div>
