--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -10,8 +10,7 @@
 						<div class="btn-group">
 							<button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action<span class="caret"></span></button>
 							<ul class="dropdown-menu">
-								<li><a href="#">Reduce by 1</a></li>
-								<li><a href="#">Remove All</a></li>
+								<li><a href="/reduce/{{this.item._id}}">Reduce by 1</a></li>
 							</ul>
 						</div>
 					</li>
@@ -27,7 +26,7 @@
 	<hr>
 	<div class="row">
 		<div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-			<button type="button" class="btn btn-success">Checkout</button>
+			<a href="/checkout" class="btn btn-success">Checkout</a>
 		</div>
 	</div>
 {{else}}
